cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_408.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cms/cms_sd.c:701: error: DEAD_STORE
  The value written to &pctx (type evp_pkey_ctx_st*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cms/cms_sd.c:701:9: Write of unused value
699.   
700.       if (si->pctx)
701.           pctx = si->pctx;
               ^
702.       else {
703.           EVP_MD_CTX_reset(mctx);
